--- a/dark-itslearning.user.css
+++ b/dark-itslearning.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Dark itslearning
 @namespace      github.com/Drumber/Dark-itslearning
-@version        0.4.0
+@version        0.4.1
 @description    Dark theme for itslearning
 @author         Drumber
 @homepageURL    https://github.com/Drumber/Dark-itslearning
@@ -272,6 +272,11 @@
         backdrop-filter: blur(10px);
         border-radius: 15px;
         border: 1px solid rgba(43, 43, 43, 0.1);
+    }
+    
+    /* remove text-shadow from PDF preview iframe */
+    #mainContainer {
+        text-shadow: none !important;
     }
     
     
